// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-from-recycle-bin should delete a document from the recycle bin by id 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`delete-from-recycle-bin should handle deleting a non-existent document from the recycle bin 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;
